logs/mobility/build.make.075.log.stderr
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp: In member function ‘float ALSAController::calcHopkinsIndex()’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:69:20: error: ‘space’ was not declared in this scope
     double min_x = space->getXMinBound();
                    ^
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/ALSAController.cpp:99:33: error: ‘DBL_MAX’ was not declared in this scope
         double min_R_distance = DBL_MAX;
                                 ^
make[2]: *** [CMakeFiles/mobility.dir/src/ALSAController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp: In constructor ‘TargetDetectionEvent::TargetDetectionEvent(time_t, float, float, int)’:
/nfs/home/matthew/Swarmathon-ALSA/src/mobility/src/TargetDetectionEvent.cpp:8:22: error: no match for call to ‘(Coordinate) (float&, float&, int, time_t&)’
   position(x, y, 0, t);
                      ^
make[2]: *** [CMakeFiles/mobility.dir/src/TargetDetectionEvent.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
